[package]
name = "upload-to-object-storage"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
json = "0.12.4"
sha1 = "0.10.1"
relative-path = "1.7.0"
path-absolutize = "3.0.13"
hex = "0.4.3"
encoding_rs = "0.8.31"
regex = "1.5.6"
threads_pool = "0.2.6"